<resources>
    <string name="app_name">DetectorV1</string>
    <string name="greeting">Please choose detection type below.</string>
    <string name="detectionByPhotoText">Detection by photo</string>
    <string name="detectionByVideoText">Detection by video</string>
    <string name="load_image">Load Image</string>
    <string name="detect">Detect</string>
    <string name="infoButton">Info</string>
    <string name="closeButton">Close</string>

</resources>