<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/greeting"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="698dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting">

        <Button
            android:id="@+id/buttonDetectionByImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickDetectionByPhoto"
            android:text="@string/detectionByPhotoText" />

        <Button
            android:id="@+id/buttonDetectionByVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickDetectionByVideo"
            android:text="@string/detectionByVideoText" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>